[package]
edition = "2021"
name = "minivolta"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = {version = "4.4.7", features = ["cargo"]}
indicatif = "0.17.7"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = {version = "2.12.2", default-features = false, features = ["napi4"]}
napi-derive = "2.12.2"
reqwest = "0.11.22"
term_size = "0.3.2"
tokio = {version = "1.34.0", features = ["full"]}

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
